correct checkbox icon

--- a/index.html
+++ b/index.html
@@ -410,9 +410,9 @@
 
       <fieldset class="fieldset-submit">
         <label>
-          <input type="checkbox"/>
+        <input type="checkbox"/>
           <span class="modal-submit-checkbox">
-    <svg class="modal-submit-icon"><use href="./images/icons.svg#icon-vector"> </use></svg></span></label>
+    <svg class="modal-submit-icon"><use href="./images/icons.svg#icon-permission"> </use></svg></span></label>
         <p class="modal-submit-text">Oświadczam, iż akceptuję <a class="modal-submit-term" href="#">Regulamin</a> i <a class="modal-submit-term" href="#">Politykę Prywatności</a> </p></fieldset>
         
         <button class="modal-submit-button" type="submit"><p class="modal-submit-button-push">Wyślij</p></button>   
