added focus to form

--- a/index.html
+++ b/index.html
@@ -410,15 +410,13 @@
 
       <fieldset class="fieldset-submit">
         <label>
-        <input type="checkbox"/>
+        <input class="modal-checkbox" type="checkbox"/>
           <span class="modal-submit-checkbox">
     <svg class="modal-submit-icon"><use href="./images/icons.svg#icon-permission"> </use></svg></span></label>
         <p class="modal-submit-text">Oświadczam, iż akceptuję <a class="modal-submit-term" href="#">Regulamin</a> i <a class="modal-submit-term" href="#">Politykę Prywatności</a> </p></fieldset>
         
         <button class="modal-submit-button" type="submit"><p class="modal-submit-button-push">Wyślij</p></button>   
      
-
-
   
 
     <!-- <div class="form-field">
