--- a/portfolio.html
+++ b/portfolio.html
@@ -224,6 +224,19 @@
     </li>
  </ul>
     </div>
+
+    <div class="footer-form">
+
+      <fieldset class="fieldset-footer">
+        <label class="fieldset-footer-label" for="newsletter">
+          <p class="fieldset-footer-label">Zapisz się do newslettera</p>
+        <input class="fieldset-footer-input" type="email" id="newsletter" placeholder="Email"/>
+    
+        </label>
+      </fieldset>
+ <button class="fieldset-footer-button" type="button"><p class="fieldset-footer-button-push">Zapisz się</p><svg class="fieldset-footer-icon"><use href="./images/icons.svg#icon-icon-send"> </use></svg></span></button> 
+    </div>
+
     </div>
       </address>
     </footer>
