checked by validator

--- a/portfolio.html
+++ b/portfolio.html
@@ -229,12 +229,12 @@
 
       <fieldset class="fieldset-footer">
         <label class="fieldset-footer-label" for="newsletter">
-          <p class="fieldset-footer-label">Zapisz się do newslettera</p>
+          <span class="fieldset-footer-label">Zapisz się do newslettera</span>
         <input class="fieldset-footer-input" type="email" id="newsletter" placeholder="Email"/>
     
         </label>
       </fieldset>
- <button class="fieldset-footer-button" type="button"><p class="fieldset-footer-button-push">Zapisz się</p><svg class="fieldset-footer-icon"><use href="./images/icons.svg#icon-icon-send"> </use></svg></span></button> 
+ <button class="fieldset-footer-button" type="button"><span class="fieldset-footer-button-push">Zapisz się</span><svg class="fieldset-footer-icon"><use href="./images/icons.svg#icon-icon-send"> </use></svg></button> 
     </div>
 
     </div>
